[metadata]
name          = FakeFSHelpers
version       = file: VERSION.txt
description   = convenience library to help working with filesystem-related code in unit tests

author        = Felix Schwarz
author_email  = felix.schwarz@oss.schwarz.eu
url           = https://github.com/FelixSchwarz/fakefs_helpers
license       = MIT
license_file  = LICENSE.txt

classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
project_urls =
	Code = https://github.com/FelixSchwarz/fakefs_helpers
	Issue tracker = https://github.com/FelixSchwarz/fakefs_helpers/issues


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true


[bdist_wheel]
universal = 1

